[package]
name = "wvw-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gtk4-layer-shell = "0.4" # https://github.com/wmww/gtk-layer-shell
gstreamer = "0.21" # https://crates.io/crates/gstreamer <-- need download deps
gstreamer-video = "0.21" # https://crates.io/crates/gstreamer-video
tracing.workspace = true
tracing-subscriber.workspace = true
